# JoyCube

./: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  usb_descriptors.c  usb_descriptors.h
hardware/: Hardware_Design.md
